now displays a balloon for each track. added balloon icon, habitat code finds payloads better